crates/cairn-tui/src/snapshots/cairn_tui__scenarios__snapshot_tests__loading-error__80x24.snap
---
source: crates/cairn-tui/src/scenarios.rs
expression: frame
---
┌ / ───────────────────────────────────┐┌ / ───────────────────────────────────┐
│Loading…                              ││error: permission denied              │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└────────────────────────── sort: name ┘└────────────────────────── sort: name ┘
 …   q quit · Tab · ↵ open · v view · e edit · r rename · c copy · m move
     ^S size · F7 mkdir · / filter · ^R refresh · p pause · s sort · . hidden
